Removed OWLOntology field from EntityCrudContext and replaced it with an OWLOntologyID